Specs/Grammar.txt
Program
	: StatementList
	;

StatementList
	: Statement
	| StatementList Statement
	;

Statement
	: ExpressionStatement
	| BlockStatement
	| VariableStatement
	| ControlStatement
	| IterationStatement
	| FunctionStatement
	| ReturnStatement
	| StructStatement
	;

ExpressionStatement
	: Expression ';'
	;

BlockStatement
	: '{' OptionalStatementList '}'
	;

VariableStatement
	: DatatypeKeyword VariableDeclarationList ';'
	;

VariableDeclarationList
	: VariableDeclaration
	| VariableDeclarationList ',' VariableDeclaration
	;

VariableDeclaration
	: IdentifierExpression OptionalVariableInitializer
	;

VariableInitializer
	: '=' AssignmentExpression
	;

ControlStatement
	: 'if' '(' Expression ')' Statement
	| 'if' '(' Expression ')' Statement 'else' Statement
	;

IterationStatement
	: WhileStatement
	| DoWhileStatement
	| ForStatement
	;

WhileStatement
	: 'while' '(' Expression ')' Statement
	;

DoWhileStatement
	: 'do' Statement 'while' '(' Expression ')' ';'
	;

ForStatement
	: 'for' '(' OptionalForVariableInitializer ';' OptionalExpression ';' OptionalExpression ')' Statement
	;

ForVariableInitializer
	: VariableStatement
	| Expression
	;

FunctionStatement
	: 'function' Identifier '(' OptionalParameterList ')' BlockStatement
	;

ReturnStatement
	: 'return' OptionalExpression ';'
	;

StructStatement
	: 'struct' Identifier StructBlockStatement ';'
	;

StructBlockStatement
	: '{' OptionalVariableStatementList '}'
	;

VariableStatementList
	: VariableStatement
	| VariableStatementList VariableStatement
	;

ParameterList
	: Identifier
	| ParameterList ',' Identifier
	;

Expression
	: AssignmentExpression
	;

AssignmentExpression
	: LogicalORExpression
	| LHSExpression AssignmentOperator AssignmentExpression
	;

RelationalExpression
	: AdditiveBinaryExpression
	| AdditiveBinaryExpression RelationalOperator RelationalExpression
	;

EqualityExpression
	: RelationalExpression EqualityOperator EqualityExpression
	| RelationalExpression
	;

LogicalANDExpression
	: EqualityExpression '&&' LogicalANDExpression
	| EqualityExpression
	;

LogicalORExpression
	: LogicalANDExpression '||' LogicalORExpression
	| LogicalORExpression
	;

LHSExpression
	: MemberExpression
	| CallExpression
	;

CallExpression
	: Callee CallArguments
	;

Callee
	: MemberExpression
	| CallExpression
	;

CallArguments
	: '(' OptionalCallArgumentList ')'
	;

CallArgumentList
	: AssignmentExpression
	| CallArgumentList ',' AssignmentExpression
	;

MemberExpression
	: PrimaryExpression
	| MemberExpression '.' IdentifierExpression
	| MemberExpression '[' Expression ']'
	;

IdentifierExpression
	: IdentifierToken
	;

PrimaryExpression
	: LiteralExpression
	| ParenthesizedExpression
	| IdentifierExpression
	| NewExpression
	;

NewExpression
	: 'new' MemberExpression
	;

UnaryExpression
	: LHSExpression
	| UnaryOperator UnaryExpression
	;

AdditiveBinaryExpression
	: MultiplicativeBinaryExpression
	| AdditiveBinaryExpression AdditiveOperator MultiplicativeBinaryExpression
	;

MultiplicativeBinaryExpression
	: UnaryExpression
	| MultiplicativeBinaryExpression MultiplicativeOperator UnaryExpression
	;

ParenthesizedExpression
	: '(' Expression ')'
	;

LiteralExpression
	: IntegerLiteral
	| FloatLiteral
	| StringLiteral
	| BooleanLiteral
	| NullLiteral
	;

IntegerLiteral
	: INTEGER
	;

FloatLiteral
	: FLOAT
	;

StringLiteral
	: STRING
	;

BooleanLiteral
	: BOOL
	;

NullLiteral
	: NULL
	;

AdditiveOperator
	: '+'
	| '-'
	;

MultiplicativeOperator
	: '*'
	| '/'
	| '%'
	;

AssignmentOperator
	: '='
	| '+='
	| '-='
	| '*='
	| '/='
	| '%='
	| '&='
	| '|='
	| '^='
	| '>>='
	| '<<='
	;

RelationalOperator
	: '<'
	| '<='
	| '>'
	| '>='
	;

EqualityOperator
	: '=='
	| '!=
	;

LogicalOperator
	: '&&'
	| '||'
	;

UnaryOperator
	: '+'
	| '-'
	| '!'
	;

DatatypeKeyword
	: 'auto'
	| 'int'
	| 'float'
	| 'str'
	| 'bool'
	;
